积分系列页面80%+系统类页面修订

--- a/css/system/about/join.less
+++ b/css/system/about/join.less
@@ -53,7 +53,7 @@
 		.none;
 	}
 }
-.ua-mobile{
+.ua-mobile,.screen-s{
 	.m-about-join .default{
 		.role{.w(30%);}
 		.email{.w(30%);}
@@ -63,6 +63,8 @@
 		}
 	}
 }
-.ua-mobile .sort-26{
-	.wp{padding:0;}
+.ua-mobile,.screen-s{
+	.sort-26{
+		.wp{padding:0;}
+	}
 }
