--- a/css/system/faq.less
+++ b/css/system/faq.less
@@ -3,266 +3,16 @@
 @import url('../global/var.less');		//尺寸
 @import url('../module/ui/text.less');		//尺寸
 
-.ct2_a .mn{
-	margin-right:0;
-}
+@import url('faq/layout.less');
+@import url('faq/search.less');
+@import url('faq/sidebar.less');
+@import url('faq/content.less');
 
-.faq-container{
-	min-height:400px;
-}
-.ua-mobile,.screen-s{
-	.faq-container{
-		min-height:auto;
-	}
-}
 
-.faq-container .wp{
-	.pr;
-}
 
-.m-faq-sidebar{
-	.w(120px);
-	padding:5px 10px;
-	.pa;.lt(0,0);
-}
-.m-faq-content{
-	margin-left:120px + 20px;
-	.w(auto) !important;
-	float:none  !important;
-	.db !important;
-}
-.ua-mobile,.screen-s{
-	.m-faq-content{
-		margin-left:0 !important;
-	}
-}
 
-.m-faq-search{
-	.pa;.rt(0,5px);.z(2);
-	.mtn{margin-top:0 !important;} //reset dz default 
-	.u-text-wp{
-		.db;.fl;
-		.w(180px);
-		margin-top:1px;
-		.fzlh(13px,26px);
-		margin-right:5px;
-		overflow:visible;
-		border:1px solid #ddd;
-		.r(3px);
-	}
-	.u-text{
-		//padding:2px 4px;
-		padding:0 10px;
-		background: none;
-		border:none;
-		box-sizing:border-box;
-		.full;
-	}
-	.u-button{
-		.fl;
-		.size(80px,28px);
-		.fz(13px,28px);
-	}
-}
-.ua-mobile,.screen-s{
-	.m-faq-search{
-		.pa;.lt(0,-30px);.w(100%);
-		padding:0 20px;box-sizing:border-box;
 
-		form{.w(100%);}
 
-		.u-button{.pa;.rt(20px,0);}
-		.u-text-wp{
-			float:none;
-			margin-right:80px + 5px ;
-			.w(auto);
-		}
-	}
-}
 
-.m-faq-main{
-	border:none;background:none;
-}
-.ua-mobile,.screen-s{
-	.m-faq-main{
-		margin-top:40px;
-	}
-}
 
-.m-faq-sidebar{
-	h2{.none;}
 
-	li{
-		color: #777;
-		margin-bottom:5px;
-		height:auto;
-	}
-	a{
-		.pr;
-		.fzlh(13px,28px);
-		padding-left:22px;
-		.db;
-	}
-	a:before {
-		content: '';
-		.db;.pa;.lt(0,7px);
-		.size(15px);
-		background:url('@{url}header/icons2.png') no-repeat -215px -4px;
-	}
-	li a:hover,li.a a{
-		&:before{
-			background-position:-215px -24px;
-		}
-		color:@blue-link;
-	}
-	li.a a{
-		.bold;
-	}
-}
-.ua-mobile,.screen-s{
-	.m-faq-sidebar{
-		.none;
-		.pf;.lt(0,@c-header-height);
-		.z(40);
-		.w(100%);
-		background-color:#fff;
-		padding:10px 20px 20px;
-		border-bottom:1px solid #ddd;
-		box-sizing:border-box;
-	}
-}
-.pg_faq .i-header{
-	.z(40);
-}
-.alertHTML{
-	.ua-mobile,.screen-s{
-		.m-faq-sidebar{
-			top:@c-header-height + @c-alert-height;
-		}
-	}
-}
-
-.m-faq-content{
-	/*.pr;overflow:visible;
-
-	.bm .pns{.pa;top:-43px;right:0;.z(2);}*/
-
-	h1{
-		background-color:#f2f2f2;border-radius:24px;
-		padding:0 10px;
-	}
-
-	.m-faq-cattitle{
-		.bold;
-		border-bottom:1px dotted #ddd;
-		a{color:@blue-link;}
-	}
-
-	.m-faq-list{
-		border-bottom:none;margin-bottom:10px;
-		li{line-height:20px;list-style:square;}
-	}
-
-	//折叠的详情
-	.umh{
-		h3{font-size:13px;color:@blue-link;.bold;}
-		&.umn{
-			h3{color:#555;font-weight:normal;}
-		}
-	}
-	//虚线
-	.umn{
-		background-position:0 center;
-	}
-	//展开
-	.umh h3{
-		background-position:right 8px;
-	}
-	//折叠
-	.umh.umn h3{
-		background-position:right -32px;
-	}
-	.umh_act{
-		.fz(12px,26px);
-	}
-	//展开的详情
-	.um{
-		//transition:0.3s ease-in;
-		border:1px dotted #ddd;padding:10px;
-		background:#f7f7f7;
-
-		a{
-			.color(@blue-link,@blue-link);
-			&:hover{
-				text-decoration:underline;
-			}
-		}
-
-		b{
-			.bold;
-		}
-
-		strong{
-			color:#cc0000;
-			.bold;
-		}
-
-		img{
-			max-width:100%;
-			.db;
-			padding:5px;
-			border:1px solid #ddd;
-			background-color:#fff;
-		}
-
-		table{
-			min-width:80%;
-			max-width:100%;
-			margin:5px auto;
-		}
-
-		table td,table th{
-			padding:2px 5px;
-			border:1px solid #ddd;
-		}
-
-		table th{
-			background-color:#fafafa;
-			.bold;
-		}
-
-		table tr:nth-child(2n){
-			background-color:@blue-bg;
-		}
-		table tr:nth-child(2n+1){
-			background-color:#fff;
-		}
-
-		code{
-			font-family:Consolas,'微软雅黑';
-			.fz(12px,2);
-			.db;
-			background-color:#fff;
-			border:1px solid #ddd;
-			border-radius:3px;
-			margin:5px 0;
-			padding:5px;
-		}
-
-	}
-}
-.ua-mobile,.screen-s{
-	.m-faq-content .um{
-		overflow-x:auto;
-	}
-}
-
-.m-faq-details{
-	line-height:2.4;
-}
-.m-faq-help{
-	border-top:1px dashed #999;
-	.x(right);
-	margin-top:5px;padding-top:5px;
-	.fz(12px,24px);
-}
