--- a/css/user/common/sidebar.less
+++ b/css/user/common/sidebar.less
@@ -105,13 +105,13 @@
 		.size(15px);
 		background:url('@{url}header/icons2.png') no-repeat -215px -4px;
 	}
-	li a:hover,li.a a{
+	li a:hover,li.a a,li a.on{
 		&:before{
 			background-position:-215px -24px;
 		}
 		color:@blue-link;
 	}
-	li.a a{
+	li.a a,li a.on{
 		.bold;
 	}
 }
