--- a/css/user/credit/buy.less
+++ b/css/user/credit/buy.less
@@ -6,211 +6,8 @@
 @import url('../../module/ui/tips.less');	
 
 @import url('common.less');	
+@import url('buy/common.less');	
+@import url('buy/buy.less');	
+@import url('buy/log.less');	
+@import url('buy/other.less');	
 
-
-//积分充值
-.buy-pc-primary{
-	.m-days label span{padding-top:30px;}
-	.m-days label .credit{.none;}
-
-	.m-subtitle{
-		margin-bottom:12px;
-	}
-
-	.m-wrapper{
-		.clearfix;
-	}
-
-	.m-custom{
-		.clearfix;
-		.tobuy-custom,.u-buy-tips{.fl;}
-	}
-
-	.tobuy-custom{
-		margin:10px auto;
-		.size(280px,40px);
-		padding:0 50px 0 10px;
-		border:1px solid #ddd;
-		box-shadow:0 0 2px #eee inset;
-		transition:0.2s ease-in-out;
-		.r(2px);
-		.pr;
-		.u-text-buynum{
-			background: none;
-			border:none;
-			line-height:40px;
-			.fz(16px,40px);
-			.db;.auto(x);
-			.full;
-			.tip(custom,color,#ccc);
-		}
-		.price{
-			.pa;.rt(10px,5px);
-			.fz(14px);
-			color:#ccc;
-			transition:0.1s ease-in-out;
-			background-color:#fff;
-		}
-		&.u-focus{
-			border:1px solid @yel;
-			box-shadow:0 0 6px #eee inset;
-			.price{
-				color:@yel;
-			}
-		}
-		&.u-error{
-			.u-text-buynum{
-				border-color:#f00;
-			}
-			.price{
-				color:#f00;
-			}
-		}
-	}
-
-	.u-buy-tips{
-		.x;margin-left:10px;margin-top:10px;
-		color:@yel;
-		line-height:40px;
-	}
-
-	.m-payway{
-	}
-
-	.m-tips-alipay{
-		margin-top:20px;.x;
-		border:1px solid #ddd;
-		background-color:#f7f7f7;
-		padding:5px 10px;
-		.fz(12px,1.6);
-		b{color:#c00;.bold;}
-		.r(2px);
-	}
-
-	.m-gobutton-buy{
-		background-color:#0084ff;
-		&:hover{
-			background-color:#339dff;
-		}
-	}
-}
-.ua-responsive .screen-s{
-	.m-block{
-		margin:0 10px 10px 10px;
-	}
-	.m-credit-primary{
-		padding:0 10px;
-	}
-	.buy-pc-primary .tobuy-custom{
-		.w(100%);
-		box-sizing:border-box;
-	}
-	.buy-pc-primary .m-custom .tobuy-custom, .buy-pc-primary .m-custom .u-buy-tips{
-		float:none;
-		.x(left);
-		margin:0;
-	}
-	.baseinfo{
-		.none;
-	}
-	.buy-pc-container{
-		padding-top:5px;
-	}
-}
-
-//充值记录
-.buy-pc-log{
-	.m-gobutton{
-		.db;
-		padding:0 10px;
-		margin-top:10px;
-		.lh(28px);
-		.w(80px);
-		.fz(13px,28px);
-		color:#fff;
-		.x;.r(2px);
-		&:extend(.u-btn-blue);
-	}
-	.exfm{
-		table{
-			.w(100%);
-		}
-		td,th{
-			padding:5px 5px;
-		}
-		.pn{
-			.lh(28px);
-			padding:0 20px;
-		}
-	}
-}
-.ua-responsive .screen-s .buy-pc-log{
-	.m-credit-log-system{.full(x);overflow-x:auto;}
-	.exfm table{.table(block);}
-	.exfm *{.clearfix;}
-}
-
-//我的积分
-.buy-pc-rule,.buy-pc-exchange,.buy-pc-transfer,.buy-pc-log,.buy-pc-log{
-	padding:0 20px;
-}
-//积分记录
-.buy-pc-log{
-	.fz(12px,1.6);
-	.color(#888,#555,@bluex);
-	.dt{
-		border: 1px solid #eee;
-	}
-	.dt th{background-color:#f7f7f7;}
-	.dt td, .dt th{
-		padding:8px 12px;
-		//background-color:#f7f7f7;
-		border-bottom:1px solid #eee;
-	    border-right: 1px solid #eee;
-	    font-weight:normal;
-	}
-	.alt, .alt th, .alt td{
-		background-color:#f7f7f7;
-	}
-	.m-gobutton{
-		&:hover{color:#fff;}
-	}
-	.exfm{
-		background-color:#fff;
-	}
-}
-//积分转换
-.buy-pc-exchange{
-	.buy-pc-exchange-tips{
-		.tips(yel);
-	}
-}
-//积分转账
-.buy-pc-transfer{
-	.buy-pc-transfer-tips{
-		.tips(yel);
-	}
-}
-//积分规则
-.buy-pc-rule{
-	.tbmu.bw0{
-		.clearfix;
-		padding-top:0;
-	}
-	.tbmu.bw0 p{.fl;}
-	.buy-pc-rule-tips{
-		.fr;.color(@blue-link,@blue-link,@blue-link);
-		a:hover{text-decoration:underline;}
-	}
-	.dt td, .dt th{
-		padding:4px 5px;
-		border-bottom:1px solid #ddd;
-	}
-	.alt, .alt th, .alt td{
-		background-color:#f7f7f7;
-	}
-	.dt th{
-		background-color:#f5f5f5;
-		font-weight:normal;
-	}
-}
