--- a/css/user/credit/common.less
+++ b/css/user/credit/common.less
@@ -197,7 +197,8 @@
 		letter-spacing:1px;
 	}
 }
-.ua-responsive .screen-s{
+
+.ua-mobile,.screen-s{
 	.m-credit-primary .m-days label, .m-credit-primary .m-payway label{
 		.w(auto);
 		float:none;
@@ -245,6 +246,6 @@
 	background-image:url('@{url}icon/error.gif');
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.m-status .profile .credit{.none;}
 }
