--- a/css/user/credit/vip.less
+++ b/css/user/credit/vip.less
@@ -38,7 +38,7 @@
 	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	//.m-status .profile .rights{.none;}
 	.vip-pc-details{padding:0 20px;background: none;}
 	.m-credit-primary .m-msg-true{
