--- a/template/default/common/faq.htm
+++ b/template/default/common/faq.htm
@@ -33,9 +33,9 @@
 			</div>
 		</div>
 
-		<div id="ct" class="m-faq-main ct2_a wp cl">
+		<div id="ct" class="m-faq-main">
 
-			<div class="m-faq-sidebar appl">
+			<div class="m-faq-sidebar">
 				<h2 class="mt bbda">{lang faq}</h2>
 				<ul>
 					<li class="cl{if empty($_GET[action])} a{/if}"><a href="misc.php?mod=faq">{lang all}</a></li>
@@ -51,7 +51,7 @@
 				<!--{hook/faq_extra}-->
 			</div>
 			
-			<div class="m-faq-content mn">
+			<div class="m-faq-content">
 				<div class="bm bw0">
 					<!--{if empty($_GET[action])}-->
 						<!--default list-->
