--- a/template/yylmacro/home/4.积分/_origin/spacecp_usergroup.htm
+++ b/template/yylmacro/home/4.积分/_origin/spacecp_usergroup.htm
@@ -146,7 +146,7 @@
 		<!--{hook/spacecp_usergroup_bottom}-->
 	</div>
 	<div class="appl">
-		<!--{subtemplate home/spacecp_footer}-->
+		<!--{subtemplate home/sidebar}-->
 	</div>
 </div>
 <!--{elseif $do == 'expiry' || $do == 'list'}-->
@@ -219,7 +219,7 @@
 			<!--{hook/spacecp_usergroup_bottom}-->
 		</div>
 		<div class="appl">
-			<!--{subtemplate home/spacecp_footer}-->
+			<!--{subtemplate home/sidebar}-->
 		</div>
 	</div>
 <!--{else}-->
@@ -336,7 +336,7 @@
 		<!--{hook/spacecp_usergroup_bottom}-->
 	</div>
 	<div class="appl">
-		<!--{subtemplate home/spacecp_footer}-->
+		<!--{subtemplate home/sidebar}-->
 	</div>
 </div>
 <!--{/if}-->
