--- a/template/yylmacro/home/4.积分/积分/buy_pc_exchange.htm
+++ b/template/yylmacro/home/4.积分/积分/buy_pc_exchange.htm
@@ -27,7 +27,7 @@
 							<!--{/if}-->
 						<!--{/loop}-->
 						</select>
-						&nbsp;{lang credits_need}&nbsp;
+						<span class="u-need">{lang credits_need}</span>
 						<input type="text" id="exchangedesamount" class="px" size="5" style="width: auto;" value="0" disabled="disabled" />
 						<select name="fromcredits" id="fromcredits_0" class="ps" style="display: none" onChange="exchangecalcredit();">
 						<!--{loop $_G[setting][extcredits] $id $credit}-->
