--- a/template/yylmacro/home/4.积分/积分/spacecp_credit_base.htm
+++ b/template/yylmacro/home/4.积分/积分/spacecp_credit_base.htm
@@ -2,8 +2,8 @@
 <!--{subtemplate home/iheader_credit}-->
 	<div class="user-main">
 		<!--{subtemplate home/sidebar}-->
-		<div class="user-content">
-			<div id="ct" class="ct2_a cl">
+		<div class="user-content user-credit">
+			<div id="ct" class="cl">
 				<div class="mn">
 
 					<div class="vip-pc-container buy-pc-container">
