--- a/css/system/404.less
+++ b/css/system/404.less
@@ -134,7 +134,7 @@
 
 }
 
-@media only screen and (min-device-width:320px) and (max-device-width:720px){
+.ua-mobile,.screen-s{
     .error-content{
     	.w(90%);
     	.ct(o,337px,272px);.size(337px,272px);
