--- a/css/system/about/common.less
+++ b/css/system/about/common.less
@@ -62,10 +62,12 @@
     }
 }
 
-.ua-mobile .m-timelist{
-    ul{padding-left:0;}
-    li strong{
-        .ps;
-        padding-left:30px;
-    }
+.ua-mobile,.screen-s{
+    .m-timelist{
+        ul{padding-left:0;}
+        li strong{
+            .ps;
+            padding-left:30px;
+        }
+    } 
 } 
