--- a/css/system/about/log.less
+++ b/css/system/about/log.less
@@ -35,7 +35,7 @@
 	}
 	.i-header-menu .u-post{.db;}
 }
-.ua-mobile{
+.ua-mobile,.screen-s{
 	.pg{
 		float:none;
 		margin-bottom:10px;
@@ -48,5 +48,7 @@
 } 
 
 //列表
-.ua-mobile .mn{overflow:visible;} //for phone
+.ua-mobile,.screen-s{
+	.mn{overflow:visible;} //for phone
+} 
 
