--- a/css/system/system.less
+++ b/css/system/system.less
@@ -63,7 +63,7 @@
 .i-header.showSidebar{
 	.z(40);
 }
-.alertHTML.ua-mobile{
+.alertHTML.ua-mobile,.alertHTML .screen-s{
 	.system-sidebar{
 		top:@c-header-height + @c-alert-height;
 	}
