--- a/template/yylmacro/home/4.积分/积分/buy_pc_transfer.htm
+++ b/template/yylmacro/home/4.积分/积分/buy_pc_transfer.htm
@@ -11,10 +11,10 @@
 				<tr>
 					<th>{lang memcp_credits_transfer}</th>
 					<td class="pns">
-						<input type="text" name="transferamount" id="transferamount" class="px" size="5" style="width: auto;" value="0" />
+						<input type="text" name="transferamount" id="transferamount" class="u-text" size="5" style="width: auto;" value="0" />
 						&nbsp;{$_G[setting][extcredits][$_G[setting][creditstransextra][9]][title]}&nbsp;
 						{lang credits_give}&nbsp;
-						<input type="text" name="to" id="to" class="px" size="15" style="width: auto;" />
+						<input type="text" name="to" id="to" class="u-text" size="15" style="width: auto;" />
 					</td>
 					<td class="d">
 						{lang memcp_credits_transfer_min_balance} $_G[setting][transfermincredits] {$_G[setting][extcredits][$_G[setting][creditstransextra][9]][unit]}<br />
@@ -23,11 +23,11 @@
 				</tr>
 				<tr>
 					<th><span class="rq">*</span>{lang transfer_login_password}</th>
-					<td><input type="password" name="password" class="px" value="" /></td>
+					<td><input type="password" name="password" class="u-text" value="" /></td>
 				</tr>
 				<tr>
 					<th>{lang credits_transfer_message}</th>
-					<td><input type="text" name="transfermessage" class="px" size="40" /></td>
+					<td><input type="text" name="transfermessage" class="u-text" size="40" /></td>
 				</tr>
 				<tr>
 					<th>&nbsp;</th>
