--- a/template/yylmacro/home/8.侧边栏/sidebar.htm
+++ b/template/yylmacro/home/8.侧边栏/sidebar.htm
@@ -13,7 +13,6 @@
 	<h3 class="user-sidebar-title"><a href="javascript:;"><i class="u-user-os-setting"></i>资料修改<em></em></a></h3>
 	<ul class="user-sidebar-list">
 		<li {if ($_GET['ac']=="profile") && ($_GET['op']=="password")} class="on"{/if}><a href="home.php?mod=spacecp&ac=profile&op=password">修改密码</a></li>
-		<!-- <li{if ($_GET['mod']=="spacecp" && $_GET['ac']=="plugin" && $_GET['id']=="k_gaiming:k_gaiming")} class="on"{/if}><a href="home.php?mod=spacecp&ac=plugin&op=profile&id=k_gaiming:k_gaiming">修改用户名</a></li> -->
 		<li {if ($_GET['ac']=="avatar")} class="on"{/if}><a href="home.php?mod=spacecp&ac=avatar">设置头像</a></li>
 		<li {if ($_GET['ac']=="profile") && !($_GET['op']=="password") && !($_GET['op']=="verify")} class="on"{/if}><a href="home.php?mod=spacecp&ac=profile">详细资料</a></li>
 		<li{if ($_GET['op']=="verify")} class="on"{/if}><a href="{if $_G['setting']['verify']['enabled']}home.php?mod=spacecp&ac=profile&op=verify{else}home.php?mod=spacecp&ac=videophoto{/if}">申请认证</a></li>
@@ -24,8 +23,8 @@
 
 	<h3 class="user-sidebar-title"><a href="javascript:;"><i class="u-user-os-credit"></i>积分中心<em></em></a></h3>
 	<ul class="user-sidebar-list">
-		<li {if ($_GET['ac']=="credit")} class="on"{/if}><a class="buy" href="home.php?mod=spacecp&ac=credit&op=buy">充 值</a></li>
-		<li {if ($_GET['ac']=="usergroup")} class="on"{/if}><a class="vip" href="home.php?mod=spacecp&ac=usergroup&do=list">VIP会员</a></li>
+		<li {if ($_GET['ac']=="credit")} class="on"{/if}><a class="buy" href="./buy">充 值</a></li>
+		<li {if ($_GET['ac']=="usergroup")} class="on"{/if}><a class="vip" href="./vip">VIP会员</a></li>
 		<li {if $_GET['topicid'] == '118'} class="on"{/if}><a class="gift" href="./gift">礼品兑换</a></li>
 		<li {if ($_GET['ac']=="invite")} class="on"{/if}><a href="home.php?mod=spacecp&ac=invite">邀请码</a></li>
 	</ul>
