移动版手机下滑菜单统一

--- a/css/module/common/i-header.less
+++ b/css/module/common/i-header.less
@@ -1,3 +1,4 @@
 @import url('i-header/all.less');
 @import url('i-header/panel.less');
 @import url('i-header/menu.less');
+@import url('i-header/slider.less');
