--- a/css/user/bbs/guide/item.less
+++ b/css/user/bbs/guide/item.less
@@ -3,8 +3,7 @@
 
 	.db;.clearfix;
 	border-bottom:1px dashed #ddd;
-	line-height:36px;
-	padding:5px 10px;
+	padding:10px;
 
 	table{
 		.w(100%);
@@ -13,16 +12,16 @@
 		.db;
 	}
 	.u-title{
-		.lh(26px);
-
 		.w(100%);
-		.nobreak;
+		//.nobreak;
 		color:#555;
 		.color(#666,@blue-link,#c00);
 		.tps{.none;}
 		img{margin-left:3px;margin-top:-3px;}
 	}
-	.xst{}
+	.u-bankuai,.xst{
+		.lh(22px);
+	}
 	.u-bankuai{
 		.dbi;
 		.r(2px);
@@ -53,9 +52,6 @@
 }
 
 .ua-mobile,.screen-s{
-	.u-guideitem{
-		padding:10px;
-	}
 	.u-count,.u-pubtime{
 		font-size:13px;
 	}
