--- a/template/about/forum/forumdisplay_header.htm
+++ b/template/about/forum/forumdisplay_header.htm
@@ -5,7 +5,7 @@
 		<!-- 发布帖子 -->
 		<a class="u-post" href="forum.php?mod=post&action=newthread&fid=$_G['fid']"><i></i><span>发贴</span></a>
 		<!-- 展开侧边栏 -->
-		<a class="u-all" id="i-header-sidebar-tg" href="javascript:;"><span>更多</span></a>
+		<a class="u-more i-header-slidermenutg" href="javascript:;"><i></i><span>更多</span></a>
 	</div>
 </header>
 
