--- a/template/yylmacro/home/4.积分/积分/ifooter_credit.htm
+++ b/template/yylmacro/home/4.积分/积分/ifooter_credit.htm
@@ -1,5 +1,5 @@
 	</div>
-	<div class="user-extend-menu" id="user-extend-menu">
+	<div class="user-extend-menu i-header-slidermenu" id="user-extend-menu">
 		<ul>
 			<li><a class="tab-btn {if $_GET['op'] == 'buy'}on{/if}" href="home.php?mod=spacecp&ac=credit&op=buy">积分充值</a></li>
 			<li><a class="tab-btn {if $_GET['op'] == 'log'}on{/if}" href="home.php?mod=spacecp&ac=credit&op=log">积分记录</a></li>
