--- a/css/module/common/i-header/menu.less
+++ b/css/module/common/i-header/menu.less
@@ -1,14 +1,33 @@
 .i-header-menu{
 	.pa;.rt(0,0);
 
-	//更多
+	//旧版更多
 	.u-all{
 		.db;.fl;
-		span{.none;}
 		.size(32px,24px);
 		background:~"url('@{url}forum/i-menu-more.svg') no-repeat 0 0 / auto 100%";
 		margin-top:11px;
 		margin-right:10px;
+		span{
+			.none;
+		}
+	}
+
+	//旧版发表（发布页）
+	.u-pub{
+		padding:0 10px;
+		line-height:24px;
+		font-size:15px;
+		.fr;margin-top:10px;
+		i{
+			.dbi;.y;.size(26px,18px);margin-top:-2px;
+			background:~"url('@{url}forum/post.svg') no-repeat 0 0 / auto 100%";
+		}
+		//span{.none;}
+		background: none;
+		border:none;
+		box-shadow:none;
+		appearance:none;
 	}
 
 	//只看楼主（列表页）
@@ -26,35 +45,7 @@
 		}
 	}
 
-	//发表（发布页）
-	.u-pub{
-		padding:0 10px;
-		line-height:24px;
-		font-size:15px;
-		.fr;margin-top:10px;
-		i{
-			.dbi;.y;.size(26px,18px);margin-top:-2px;
-			background:~"url('@{url}forum/post.svg') no-repeat 0 0 / auto 100%";
-		}
-		//span{.none;}
-		background: none;
-		border:none;
-		box-shadow:none;
-		appearance:none;
-	}
-
-	//发布（列表页）
-	.u-post{
-		.fl;
-		margin-top:10px;
-		margin-right:10px;
-		i{
-			.db;.size(32px,25px);
-			background:~"url('@{url}forum/write.svg') no-repeat 0 0 / auto 100%";
-		}
-		span{.none;}
-	}
-
+	
 	//发消息
 	.u-msg{
 		.fl;
@@ -67,13 +58,35 @@
 		span{.none;}
 	}
 
+	//发布（列表页）
+	.u-post{
+		.fl;
+		padding:11px 6px 11px 10px;
+		i{
+			.db;.size(30px,24px);
+			background:~"url('@{url}header/mobile/post.svg') no-repeat 0 0 / auto 100%";
+		}
+		span{.none;}
+	}
+
 	//设置
 	.u-setting{
 		.fl;
 		padding:13px;
 		i{
 			.db;.size(20px);
-			background:~"url('@{url}user/setting.svg') no-repeat 0 0 / auto 100%";
+			background:~"url('@{url}header/mobile/setting.svg') no-repeat 0 0 / auto 100%";
+		}
+		span{.none;}
+	}
+
+	//新版更多
+	.u-more{
+		.fl;
+		padding:11px;
+		i{
+			.db;.size(24px);
+			background:~"url('@{url}header/mobile/more.svg') no-repeat 0 0 / auto 100%";
 		}
 		span{.none;}
 	}
