--- a/css/system/faq/sidebar.less
+++ b/css/system/faq/sidebar.less
@@ -1,3 +1,6 @@
+.i-header{
+	.z(40);
+}
 .m-faq-sidebar{
 	h2{.none;}
 
@@ -30,21 +33,12 @@
 }
 .ua-mobile,.screen-s{
 	.m-faq-sidebar{
-		.none;
-		.pf;.lt(0,@c-header-height);
-		.z(40);
-		.w(100%);
-		background-color:#fff;
-		padding:10px 20px 20px;
-		border-bottom:1px solid #ddd;
-		box-sizing:border-box;
-	}
-}
-.pg_faq .i-header{
-	.z(40);
-}
-.alertHTML.ua-mobile,.alertHTML .screen-s{
-	.m-faq-sidebar{
-		top:@c-header-height + @c-alert-height;
+		padding:0;
+		li{
+			margin-bottom:0;
+		}
+		li.a a{
+			.normal;
+		}
 	}
 }
