--- a/template/about/forum/custom_footer.htm
+++ b/template/about/forum/custom_footer.htm
@@ -1,1 +1,4 @@
+<div class="i-header-slidermenu">
+	<!--{subtemplate forum/sidebar}-->
+</div>
 <script src="http://js.jx3pve.com/js/page/page-about.min.js"></script>
