--- a/template/yylmacro/forum/guide.htm
+++ b/template/yylmacro/forum/guide.htm
@@ -5,7 +5,7 @@
 	<a class="i-header-back" href="./home.php"><i></i></a>
 	<div class="i-header-title">我的帖子</div>
 	<div class="i-header-menu">
-		<a class="u-all" id="user-guide-authortipstg" href="javascript:;"><span>更多</span></a>
+		<a class="u-more i-header-slidermenutg" id="user-guide-authortipstg" href="javascript:;"><i></i><span>更多</span></a>
 	</div>
 </header>
 <div class="user-container guide-container">
@@ -62,7 +62,7 @@
 							</ul>
 						</div>
 						
-						<div class="m-guide-authortips" id="user-guide-authortips"><!--{block/1799}--></div>
+						<div class="m-guide-authortips i-header-slidermenu" id="user-guide-authortips"><!--{block/1799}--></div>
 
 						<ul id="thread_types" class="ttp bm cl">
 							<li $currentview['hot']><a href="forum.php?mod=guide&view=hot">{lang guide_hot}</a></li>
