--- a/css/module/common/i-header/menu.less
+++ b/css/module/common/i-header/menu.less
@@ -49,11 +49,10 @@
 	//发消息
 	.u-msg{
 		.fl;
-		margin-top:4px;
-		margin-right:15px;
+		padding:4px;
 		i{
 			.db;.size(40px);
-			background:~"url('@{url}user/send.svg') no-repeat 0 0 / auto 100%";
+			background:~"url('@{url}header/mobile/msg.svg') no-repeat 0 0 / auto 100%";
 		}
 		span{.none;}
 	}
