--- a/css/system/system.less
+++ b/css/system/system.less
@@ -53,19 +53,10 @@
 		.r(0);
 	}
 
-	.system-content{
+	.system-content,.f-392 .default-content{
 		.w(auto);
 		float:none;
+		padding-left:10px;
+		padding-right:10px;
 	}
 }
-
-
-.i-header.showSidebar{
-	.z(40);
-}
-.alertHTML.ua-mobile,.alertHTML .screen-s{
-	.system-sidebar{
-		top:@c-header-height + @c-alert-height;
-	}
-}
-
