--- a/template/yylmacro/home/4.积分/积分/iheader_credit.htm
+++ b/template/yylmacro/home/4.积分/积分/iheader_credit.htm
@@ -4,7 +4,7 @@
 	<a class="i-header-back" href="./home.php"><i></i></a>
 	<div class="i-header-title">积分</div>
 	<div class="i-header-menu">
-		<a class="u-more i-header-slidermenutg" id="i-header-panel-tg" href="javascript:;"><i></i><span>更多</span></a>
+		<a class="u-more i-header-slidermenutg" href="javascript:;"><i></i><span>更多</span></a>
 	</div>
 </header>
 <div class="user-container">
