--- a/template/default/common/faq.htm
+++ b/template/default/common/faq.htm
@@ -4,7 +4,7 @@
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
 	<div class="i-header-title">FAQ</div>
 	<div class="i-header-menu">
-		<a class="u-more" id="i-header-sidebar-tg" href="javascript:;"><i></i><span>更多</span></a>
+		<a class="u-more i-header-slidermenutg" href="javascript:;"><i></i><span>更多</span></a>
 	</div>
 </header>
 <div class="faq-container">
