--- a/template/yylmacro/portal/portal_topic_setting.htm
+++ b/template/yylmacro/portal/portal_topic_setting.htm
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/index/index.css" type="text/css" />
 <header class="i-header">
-    <a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
+    <a class="i-header-back" href="./home.php"><i></i></a>
     <div class="i-header-title">设置</div>
 </header>
 <div class="user-os-nav">
@@ -20,7 +20,7 @@
 <div class="user-os-nav">
     <ul>
         <li><a href="./faq">帮助中心</a></li>
-        <li><a href="./feedback">反馈建议</a></li>
+        <li><a href="./feedback" target="_blank">反馈建议</a></li>
         <li><a href="./log">更新日志</a></li>
     </ul>
 </div>
