--- a/css/module/common/c-rate.less
+++ b/css/module/common/c-rate.less
@@ -70,22 +70,24 @@
 	}
 }
 
-.ua-responsive .screen-s .c-rate{
-	font-size:12px;
-	//隐藏下拉按钮
-	.dpbtn{
-		.none;
-	}
-	.reason_slct{
-		.w(100%);
-		box-sizing:border-box;
-	}
-	.reason_slct .pt{
-		.w(auto) !important;
-	}
-	.reason_slct .px{
-		width: 100% !important;
-	    box-sizing: border-box;
+.ua-mobile,.screen-s{
+	.c-rate{
+		font-size:12px;
+		//隐藏下拉按钮
+		.dpbtn{
+			.none;
+		}
+		.reason_slct{
+			.w(100%);
+			box-sizing:border-box;
+		}
+		.reason_slct .pt{
+			.w(auto) !important;
+		}
+		.reason_slct .px{
+			width: 100% !important;
+		    box-sizing: border-box;
+		}
 	}
 }
 
