--- a/template/yylmacro/home/1.消息/space_pm.htm
+++ b/template/yylmacro/home/1.消息/space_pm.htm
@@ -16,8 +16,7 @@
 		<div class="user-main">
 
 			<!--{subtemplate home/sidebar}-->
-
-			<div class="user-content">
+			<div class="user-content user-msg-pm {if ($_GET['subop']=='setting')}user-msg-setting{/if}">
 				<div id="ct" class="ct2_a cl">
 					<div class="mn">
 						<div class="bm bw0">
