--- a/template/yylmacro/home/1.消息/spacecp_pm.htm
+++ b/template/yylmacro/home/1.消息/spacecp_pm.htm
@@ -14,7 +14,7 @@
 			
 			<div class="user-main">
 				<!--{subtemplate home/sidebar}-->
-				<div class="user-content">
+				<div class="user-content user-msg-post">
 					<div id="ct" class="ct2_a cl">
 						<div class="mn">
 							<div class="bm bw0">
