--- a/template/yylmacro/home/1.消息/space_notice.htm
+++ b/template/yylmacro/home/1.消息/space_notice.htm
@@ -16,7 +16,7 @@
 
 		<div class="user-main">
 			<!--{subtemplate home/sidebar}-->
-			<div class="user-content">
+			<div class="user-content user-msg-notice">
 				<div id="ct"  class="ct2_a cl">
 					<div class="mn">
 						<div class="bm bw0">
@@ -24,7 +24,6 @@
 							<h1 class="mt"><img alt="pm" src="{STATICURL}image/feed/nts.gif" class="vm" /> {lang remind}</h1>
 							<div class="m-msg-nav tbbox">
 								<ul class="tb">
-									<li class="y"><a href="home.php?mod=space&do=pm&subop=setting" class="xi2">{lang pm_setting}</a></li>
 									<li$actives[privatepm] $actives[newpm]><a href="home.php?mod=space&do=pm&filter=privatepm">{lang private_pm}</a></li>
 									<li$actives[announcepm]><a href="home.php?mod=space&do=pm&filter=announcepm">{lang announce_pm}</a></li>
 									<!--{loop $_G['notice_structure'] $key $type}-->
@@ -34,16 +33,16 @@
 								<a class="user-msg-sendbutton" href="home.php?mod=spacecp&ac=pm">{lang send_pm}</a>
 							</div>
 							<div class="subtbbox">
-							<ul class="subtb">
-								<li class="y"><a href="home.php?mod=spacecp&ac=privacy&op=filter" target="_blank" class="xi2">{lang filter_settings}</a></li>
-								<!--{if $_G['notice_structure'][$view] && ($view == 'mypost' || $view == 'interactive')}-->
-									<!--{loop $_G['notice_structure'][$view] $subtype}-->
-										<li$readtag[$subtype]><a href="home.php?mod=space&do=notice&view=$view&type=$subtype"><!--{eval echo lang('template', 'notice_'.$view.'_'.$subtype)}--><!--{if $_G['member']['newprompt_num'][$subtype]}-->($_G['member']['newprompt_num'][$subtype])<!--{/if}--></a></li>
-									<!--{/loop}-->
-								<!--{else}-->
-									<li class="a"><a href="home.php?mod=space&do=notice&view=$view"><!--{eval echo lang('template', 'notice_'.$view)}--></a></li>
-								<!--{/if}-->
-							</ul>
+								<ul class="subtb">
+									<li class="y"><a href="home.php?mod=spacecp&ac=privacy&op=filter" target="_blank" class="xi2">{lang filter_settings}</a></li>
+									<!--{if $_G['notice_structure'][$view] && ($view == 'mypost' || $view == 'interactive')}-->
+										<!--{loop $_G['notice_structure'][$view] $subtype}-->
+											<li$readtag[$subtype]><a href="home.php?mod=space&do=notice&view=$view&type=$subtype"><!--{eval echo lang('template', 'notice_'.$view.'_'.$subtype)}--><!--{if $_G['member']['newprompt_num'][$subtype]}-->($_G['member']['newprompt_num'][$subtype])<!--{/if}--></a></li>
+										<!--{/loop}-->
+									<!--{else}-->
+										<li class="a"><a href="home.php?mod=space&do=notice&view=$view"><!--{eval echo lang('template', 'notice_'.$view)}--></a></li>
+									<!--{/if}-->
+								</ul>
 							</div>
 
 						<!--{if $view=='userapp'}-->
