--- a/css/index/index-v7.less
+++ b/css/index/index-v7.less
@@ -9,3 +9,7 @@
 @import url('index-v7/mobile.less');
 
 
+.i-footer .u-index{
+	i{background-image:url('@{url}footer/home2.svg');}
+	span{color:@blue-dark;}
+}
