--- a/css/module/common/i-footer/all.less
+++ b/css/module/common/i-footer/all.less
@@ -43,25 +43,18 @@
 		i{background-image:url('@{url}footer/nav.svg');}
 		&.on i{background-image:url('@{url}footer/nav2.svg');}
 	}
-	.u-ask{
-		i{
-			background-image:url('@{url}footer/ask.svg');
-			background-color:@blue-dark;
-		    padding: 6px 10px;
-		    background-size: auto 60%;
-		    margin-top: 1px;
-		}
-		span{.none;}
-		.none;
-	}
 	.u-search{
 		i{background-image:url('@{url}footer/search.svg');}
 		&.on i{background-image:url('@{url}footer/search2.svg');}
 	}
 	.u-os{
+		i{background-image:url('@{url}footer/os.svg');}
+		&.on i{background-image:url('@{url}footer/os2.svg');}
+	}
+	.u-msg{
 		i{
 			.pr;
-			background-image:url('@{url}footer/os.svg');
+			background-image:url('@{url}footer/msg.svg');
 			em{
 				.pa;.rt(-9px,0);
 				.db;background-color:#f00;.indent;
@@ -69,7 +62,7 @@
 				.none;
 			}
 		}
-		&.on i{background-image:url('@{url}footer/os2.svg');}
+		&.on i{background-image:url('@{url}footer/msg2.svg');}
 	}
 }
 
