--- a/css/system/sitemap.less
+++ b/css/system/sitemap.less
@@ -9,77 +9,19 @@
 }
 
 .m-sitemap-more{
-	
 	img{.y;margin-right:3px;margin-top:-3px;}
 	.fz(12px,2);color:#888;
 
 	margin-top:20px;
 	padding:10px 5px;
 	border-top:1px dashed #ddd;
-	
 }
-.m-sitemap-block{
-	margin-bottom:10px;
-	padding-left:80px;
-	.pr;
-
-	.color(#222,@blue-link,@blue-link);
-
-	h2{
-		.bold;
-		.pa;.lt(0,0);
-	}
-
-	ul{
-		.clearfix;
-	}
-
-	li{
-		.fl;
-		margin-right:20px;
-		margin-bottom:10px;
-
-		i{.none;}
-	}
-
-	a:hover{
-		text-decoration:underline;
-	}
-
-	li a em{
-		.dbi;
-		color:#999;
-		padding:0 2px;
-		//transform:scale(0.8);
-	}
-}
-
-
 .ua-mobile,.screen-s{
-
-	.sitemap-container{padding:0;}
-	.wp{padding:0;}
-
-	//.m-sitemap-more{.none;}
-	.m-sitemap-block{
-		padding:0;margin-bottom:0;
-		h2,li{
-			.fz(1.2rem,40px);
-			border-bottom:1px solid #ddd;
-		}
-		h2{
-			.ps;
-			padding:0 20px;
-			background-color:#f7f7f7;
-		}
-		li{
-			.db;float:none;
-			margin:0;
-		}
-			
-		a{.db;padding:5px 20px;}
-		a:hover{text-decoration:none;}
-		em{.fr;}
+	.sitemap-container{
+		padding:0;
 	}
-
+	.i-footer .u-nav{
+		i{background-image:url('@{url}footer/nav2.svg');}
+		span{color:@blue-dark;}
+	}
 }
