--- a/css/user/common/layout.less
+++ b/css/user/common/layout.less
@@ -14,4 +14,9 @@
 		.w(auto);
 		float:none;
 	}
+
+	.i-footer .u-os{
+		i{background-image:url('@{url}footer/os2.svg');}
+		span{color:@blue-dark;}
+	}
 }
