--- a/css/user/msg/msg.less
+++ b/css/user/msg/msg.less
@@ -18,8 +18,26 @@
 	}
 	.pgs{
 		padding:0 5px;
-		a{margin-bottom:5px;}
+		a,label,strong{margin-bottom:5px;}
 	}
+	.w-pages-list,.pgs{
+		float:none;
+		.pg{
+			float:none;
+			.clearfix;
+		}
+	}
+
+	.i-footer .u-os{
+		i{background-image:url('@{url}footer/os.svg');}
+		span{color:#aaa;}
+	}
+
+	.i-footer .u-msg{
+		i{background-image:url('@{url}footer/msg2.svg');}
+		span{color:@blue-dark;}
+	}
+	
 }
 
 
