--- a/template/default/common/footer_common.htm
+++ b/template/default/common/footer_common.htm
@@ -84,10 +84,9 @@
 <!-- jx3pve:mobile footer -->
 <footer class="i-footer">
 	<ul>
-		<li><a class="u-index {if CURMODULE == 'index'}on{/if}" href="./"><i></i><span>首页</span></a></li>
-		<li><a class="u-nav {if $_GET['topicid'] == '110'}on{/if}" href="./sitemap"><i></i><span>导航</span></a></li>
-		<li><a class="u-ask" href="./ask"><i></i><span>发布</span></a></li>
-		<li><a class="u-search {if $_GET['topicid'] == '111'}on{/if}" href="./search"><i></i><span>搜索</span></a></li>
-		<li><a class="u-os" href="./home.php"><i><em class="e-msg"></em></i><span>我</span></a></li>
+		<li><a class="u-index" href="./"><i></i><span>首页</span></a></li>
+		<li><a class="u-nav" href="./sitemap"><i></i><span>导航</span></a></li>
+		<li><a class="u-msg" href="./home.php?mod=space&do=pm"><i><em class="e-msg"></em></i><span>消息</span></a></li>
+		<li><a class="u-os" href="./home.php"><i></i><span>我</span></a></li>
 	</ul>
 </footer>
